2010-06-16 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-ifolders-tab.c: Review NactIFoldersTab page.

	* src/nact/nact-ibasenames-tab.c: Review NactIBasenamesTab page.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_on_enable_tab):
	Removed function.

	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icommand-tab.h: Review NactICommandTab page.

	* src/core/na-object-action-factory.c: Fix comment.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-iaction-tab.h: Homogeneïse the code.

2010-06-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-tab.c:
	* src/nact/nact-main-tab.h (nact_main_tab_get_context):
	New function.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c:
	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c:
	Remove irrelevant TAB_UPDATABLE_SIGNAL_ENABLE_TAB signal.

	* src/nact/nact-match-list.c:
	Do not try to get filters when there is no current context.

	* src/nact/nact-main-window.c:
	Do not mark the application as modified when list is empty.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-iproperties-tab.c:
	* src/nact/nact-ischemes-tab.c:
	* src/nact/nact-main-menubar-edit.c:
	* src/nact/nact-main-menubar-file.c:
	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c:
	* src/nact/nact-match-list.c: Rename main properties.

	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c: Remove unused PROP_SELECTED_ROW property.

	* po/POTFILES.in: Add src/nact/nact-ienvironment-tab.c file.

	* src/nact/nact-ienvironment-tab.c: Connect signals.

2010-06-14 Pierre Wieser <pwieser@trychlos.org>
